[gd_scene load_steps=18 format=3 uid="uid://cu8dk0qnr77qs"]

[ext_resource type="Theme" uid="uid://bqnq26iud8rn3" path="res://common/theme.tres" id="1_iwqch"]
[ext_resource type="Script" path="res://ui/game_screen.gd" id="2_kqcir"]
[ext_resource type="PackedScene" uid="uid://scwnvnkr08fy" path="res://ui/character_display.tscn" id="2_qajtq"]
[ext_resource type="PackedScene" uid="uid://cn7vhi2yphyq2" path="res://ui/year_indicator.tscn" id="2_qr7fv"]
[ext_resource type="PackedScene" uid="uid://b8q1tdpaxtldy" path="res://ui/audible_button.tscn" id="3_ueeqd"]
[ext_resource type="Texture2D" uid="uid://dn3sdi40yoltw" path="res://ui/hallway.png" id="4_rlc3j"]
[ext_resource type="Script" path="res://ui/option_area.gd" id="6_hfcqp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vsh8h"]
bg_color = Color(0.133333, 0.305882, 0.65098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqxn1"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7llhc"]
bg_color = Color(0.133333, 0.305882, 0.65098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_va8tt"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j6pxy"]
bg_color = Color(0.239216, 0.239216, 0.239216, 0.494118)

[sub_resource type="Animation" id="Animation_6m6et"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AdvanceInstructions:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vybcr"]
resource_name = "show_advance_instructions"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AdvanceInstructions:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 3),
"transitions": PackedFloat32Array(1, 2.07053, 2.07053),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsm27"]
_data = {
"RESET": SubResource("Animation_6m6et"),
"show_advance_instructions": SubResource("Animation_vybcr")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmiha"]
bg_color = Color(0.133333, 0.305882, 0.65098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3b0j5"]
bg_color = Color(0.133333, 0.305882, 0.65098, 1)

[node name="GameScreen" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iwqch")
theme_override_styles/panel = SubResource("StyleBoxFlat_vsh8h")
script = ExtResource("2_kqcir")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="WhiteBackground" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rqxn1")

[node name="MainUI" type="VBoxContainer" parent="MarginContainer/WhiteBackground"]
layout_mode = 2

[node name="YearIndicator" parent="MarginContainer/WhiteBackground/MainUI" instance=ExtResource("2_qr7fv")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="InnerBluePanel" type="PanelContainer" parent="MarginContainer/WhiteBackground/MainUI"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7llhc")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="TopContainer" type="VBoxContainer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="NpcPanelContainer" type="PanelContainer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/TopContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_va8tt")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/TopContainer/NpcPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/TopContainer/NpcPanelContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("4_rlc3j")
expand_mode = 1

[node name="AdvanceInstructions" type="PanelContainer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/TopContainer/NpcPanelContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_j6pxy")

[node name="AdvanceLabel" type="Label" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/TopContainer/NpcPanelContainer/AdvanceInstructions"]
layout_mode = 2
text = "Tap anywhere to continue"
horizontal_alignment = 1

[node name="AdvanceInstructionsAnimator" type="AnimationPlayer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/TopContainer/NpcPanelContainer"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_bsm27")
}

[node name="StoryContainer" type="PanelContainer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/TopContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_gmiha")

[node name="StoryLabel" type="Label" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/TopContainer/StoryContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio ut enim blandit volutpat maecenas volutpat blandit."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BottomContainer" type="PanelContainer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3b0j5")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/BottomContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CharacterDisplay" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/BottomContainer/HBoxContainer" instance=ExtResource("2_qajtq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="OptionArea" type="VBoxContainer" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/BottomContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
theme_override_constants/separation = 5
alignment = 1
script = ExtResource("6_hfcqp")

[node name="AudibleButton" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/BottomContainer/HBoxContainer/OptionArea" instance=ExtResource("3_ueeqd")]
layout_mode = 2
text = "Lorem ipsum"

[node name="AudibleButton2" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/BottomContainer/HBoxContainer/OptionArea" instance=ExtResource("3_ueeqd")]
layout_mode = 2
text = "dolor sit amet"

[node name="AudibleButton3" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/BottomContainer/HBoxContainer/OptionArea" instance=ExtResource("3_ueeqd")]
layout_mode = 2
text = "consectetur adipiscing elit"

[node name="AudibleButton4" parent="MarginContainer/WhiteBackground/MainUI/InnerBluePanel/MarginContainer/VBoxContainer/BottomContainer/HBoxContainer/OptionArea" instance=ExtResource("3_ueeqd")]
layout_mode = 2
text = "sed do eiusmod tempor"
